@@ -48,3 +48,5 @@ $ACLOCAL
 $AUTOMAKE 2>stderr && exit 1
 cat stderr
 grep 'liba\.la.* installed .*lib' stderr
+grep 'Makefile.am:5:' stderr
+grep 'Makefile.am:2:' stderr
