@@ -1,5 +1,10 @@
 2002-09-29  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* automake.in (handle_ltlibraries): Record library locations in
+	%liblocations, and print the previous declaration on error.
+	* tests/libtool6.test: Check that the locations of the two
+	definitions are shown.
+
 	For PR automake/360:  Propagate more locations.
 	* automake.in (handle_programs): Adjust usage of am_install_var's
 	return value.  Pass on locations as context to file_contents.
